News is now actually complete, and also global settings have been implemented, though probably not the final version.

--- a/RCPub/nbproject/private/private.properties
+++ b/RCPub/nbproject/private/private.properties
@@ -4,9 +4,9 @@ auxiliary.org-netbeans-modules-web-client-tools-api.INTERNET_5f_EXPLORER=false
 auxiliary.org-netbeans-modules-web-client-tools-api.serverdebug=true
 copy.src.files=false
 copy.src.target=
-index.file=install.php
+index.file=index.php
 remote.connection=Beem_Software
 remote.directory=/rc2
 remote.upload=ON_RUN
 run.as=REMOTE
-url=http://www.roughconcept.com/rc2/install/
+url=http://www.roughconcept.com/rc2/
