--- a/rcpub.vcxproj.filters
+++ b/rcpub.vcxproj.filters
@@ -23,6 +23,9 @@
     <Filter Include="RCPub\skins\beemmedia">
       <UniqueIdentifier>{ab519ac1-64ee-49e7-a10d-abce02af48fe}</UniqueIdentifier>
     </Filter>
+    <Filter Include="RCPub\cron">
+      <UniqueIdentifier>{cdb5206b-314d-48fa-8fde-a9c0dc8f43e8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="B2EvoSkin\Beemb2Skin\index.main.php">
@@ -286,6 +289,9 @@
     </None>
     <None Include="RCPub\skins\beemmedia\style.css">
       <Filter>RCPub\skins\beemmedia</Filter>
+    </None>
+    <None Include="RCPub\cron\cron.php">
+      <Filter>RCPub\cron</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
